[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "linear-algebra-visualizer"
version = "0.1.0"
description = "Visualize vectors, spans, dot products, projections, and matrix transforms in 2D/3D"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "matplotlib>=3.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
