[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "linear-algebra-visualizer"
version = "0.1.0"
description = "Interactive pygame-based visualizer for vectors, matrices, and dimensionality reduction"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pygame>=2.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
